--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
-                    <li><a href="#resume">Resume/CV</a></li>
+                    <li><a href="#resume">General Qualifications</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -32,7 +32,7 @@
     </section>
 
     <section id="resume">
-        <h2>Resume/CV</h2>
+        <h2>General Qualifications</h2>
         <div class="resume-section">
             <h3>Education</h3>
             <p><strong>Bachelor of Science (BS) in Information Technology</strong> - ICAS - Sucat, Sep 2022 - Aug 2024</p>
@@ -107,7 +107,7 @@
 
     <section id="contact">
         <h2>Contact Information</h2>
-        <p>Email: <a href="mailto:[Your Email]">[Your Email]</a></p>
+        <p>Email: <a href="mailto:carlocalvo85@gmail.com">carlocalvo85@gmail.com</a></p>
         <p>Mobile: <a href="tel:+639190628082">+639190628082</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/carlo-orlando-calvo-383834114/" target="_blank">LinkedIn Profile</a></p>
     </section>
