--- a/index.html
+++ b/index.html
@@ -43,27 +43,45 @@
             <h3>Work Experience</h3>
             <p><strong>Customer IP Network Associate II</strong> - PLDT (Oct 2018 - Present)</p>
             <ul>
-                <li>Managed and maintained network infrastructure and services for enterprise customers.</li>
+                <li>Managed and maintained network infrastructure and services offered for enterprise customers.</li>
+                <li>Service or repair telephone, physical cabling, Internet services, and other enterprise communications equipment on customers' property.</li>
                 <li>Proficient in LAN-WAN, data transmission, Cisco routers, Huawei switches, and SDH.</li>
                 <li>Worked with a team on network configuration, activation, testing, troubleshooting, and monitoring.</li>
                 <li>Partnered with departments and vendors for project delivery.</li>
+                <li>Demonstrate equipment to customers and explain its use, responding to any inquiries or complaints.</li>
+                <li>Test to verify system performance according to customer requirements</li>
+                <li>Test circuits and components of malfunctioning telecommunications equipment to isolate sources of malfunctions, using test meters, circuit diagrams, polarity probes, and other hand tools.</li>
+                <li>Test repaired, newly installed, or updated equipment to ensure that it functions properly and conforms to specifications, using test equipment and observation.</li>
+                <li>Skills: Carrier Ethernet, SDH, Fiber Optics Technologies, LAN-WAN, Cisco Routers. VeEx, ExPO, VIAVI testing</li>
             </ul>
 
             <p><strong>Jr DataNet Installer</strong> - Pointman Placement Specialists Inc. (Sep 2017 - Oct 2018)</p>
             <ul>
                 <li>Provided enterprise service configuration and activation support.</li>
+                <li>Proficient in LAN-WAN, data transmission, Cisco routers, Huawei switches, and SDH.</li>
+                <li>Test to verify system performance according to customer requirements</li>
+                <li>Test circuits and components of malfunctioning telecommunications equipment to isolate sources of malfunctions, using test meters, circuit diagrams, polarity probes, and other hand tools.</li>
                 <li>Skills: Carrier Ethernet, SDH, Fiber Optics, LAN-WAN, Cisco Routers.</li>
             </ul>
 
             <p><strong>Project ISP/OSP Technician</strong> - Pointman Placement Specialists Inc. (Dec 2014 - Sep 2017)</p>
             <ul>
-                <li>Worked on customer network inside plant projects.</li>
+                <li>Plan for installation of telecommunications network equipment</li>
+                <li>Install network equipment according to the plan and manufacturer's instructions, using safe industry practices</li>
+                <li>Test to verify system performance according to customer requirements</li>
+                <li>Restore changes made to work area during installation, to customer's satisfaction</li>
+                <li>Inventory management for equipement allocations to enterprise clients</li>
                 <li>Skills: Carrier Ethernet, Fiber Optic Technology, SDH.</li>
             </ul>
 
             <p><strong>COE Tech</strong> - Pointman Placement Specialists Inc. (Oct 2012 - Dec 2014)</p>
             <ul>
+                <li>Develop installation plans to ensure minimal workplace disruption and according to relevant legislation, codes, regulations and standards</li>
+                <li>Assess existing and potential site hazards</li>
+                <li>Verify location of proposed network equipment installation according to appropriate plans obtained from authorised personnel</li>
+                <li>Install, set up, rearrange, or remove switching, distribution, routing, and dialing equipment used in central offices</li>
                 <li>Handled customer network inside plant projects and central office installations.</li>
+                <li>Obtain tools and test equipment required for safe work practice</li>
                 <li>Skills: SDH, Fiber Optics, Telecommunications Systems.</li>
             </ul>
 
@@ -77,24 +95,26 @@
         <div class="resume-section">
             <h3>Skills</h3>
             <ul>
-                <li>Carrier Ethernet</li>
-                <li>SDH (Synchronous Digital Hierarchy)</li>
-                <li>Fiber Optics</li>
-                <li>SD-WAN</li>
-                <li>LAN-WAN</li>
-                <li>Cisco Routers</li>
-                <li>Huawei S5320 Series</li>
-                <li>IP Technologies</li>
-                <li>VoIP (Voice over IP)</li>
-                <li>Computer Hardware and Networking</li>
-                <li>Graphic Design (Photoshop, Illustrator)</li>
+                <li>TCP/IP</li>
+                <li>Routing, switching, and VLANs/li>
+                <li>Fiber Optics, routers, switches, firewalls, and access points</li>
+                <li>IDS/IPS intrusion detection/prevention systems</li>
+                <li>LAN/WAN, Wi-Fi standards and wireless security protocols 802.11/WPA2</li>
+                <li>Knowledge of Operating Systems and Virtual Machines</li>
+                <li>VMware, and cloud platforms AWS, Google Cloud</li>
+                <li>VoIP</li>
+                <li>PRTG</li>
+                <li>Python, JavaScript, CSS, HTML, C+, Django, React Native, .Net</li>
             </ul>
         </div>
 
         <div class="resume-section">
-            <h3>Achievements</h3>
+            <h3>Certifications</h3>
             <ul>
-                <li>ASEAN 2017 Technical Team - Team Sofitel</li>
+                <li><p><a href="https://drive.google.com/file/d/161I7Z1A3v00N_1sCN380TUUwBVXSUnvl/view?usp=sharing" target="_blank">FORTINET Certified Associate Cybersecurity</a></p></li>
+                <li><p><a href="https://www.scribd.com/document/710411922/Networking-Basics-Badge20240229-43-kccso5-Carlo-Orlando-Calvo" target="_blank">CISCO Networking Basics</a></p></li>
+                <li><p><a href="https://www.linkedin.com/learning/certificates/1fc5a9c4c2dba5971eab5158cb1ef4589b04138cfe448aa7f8b64cbc81907045?u=84962714" target="_blank">Java Object-Oriented Programming</a></p></li>
+                <li><p><a href="https://drive.google.com/file/d/11zZi7DwFSDO-Hz9FjbGkcndynXJxV1V4/view?usp=sharing" target="_blank">Certified Lean Six Sigma White Belt</a></p></li>
                 <li>Successfully managed numerous high-profile projects and network solutions.</li>
             </ul>
         </div>
@@ -102,7 +122,8 @@
 
     <section id="portfolio">
         <h2>Portfolio</h2>
-        <p>Details about notable projects and work samples can be added here.</p>
+        <p><a href="https://cogc-simulator.netlify.app/" target="_blank">Exam Simulator</a> - Prepare for your Cisco certification exams with my Cisco Exam Simulator! Designed to replicate the real exam environment, my simulator offers a comprehensive range of practice questions, detailed explanations, and performance tracking. Boost your confidence and knowledge with realistic practice tests and achieve your certification goals effortlessly.</p>
+        <p><a href="https://cogc-reimbursement.vercel.app/" target="_blank">Reimbursement Form</a> - Streamline your expense management with my Reimbursement Form application. Utilizing cutting-edge OCR technology, my app allows users to effortlessly scan receipts and extract key details such as date, amount, and merchant name. Built with React for a responsive front-end and Flask for a robust back-end, this application ensures efficient processing and accurate data capture, making reimbursement hassle-free and efficient.</p>
     </section>
 
     <section id="contact">
@@ -110,6 +131,7 @@
         <p>Email: <a href="mailto:carlocalvo85@gmail.com">carlocalvo85@gmail.com</a></p>
         <p>Mobile: <a href="tel:+639190628082">+639190628082</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/carlo-orlando-calvo-383834114/" target="_blank">LinkedIn Profile</a></p>
+        <p>Address: #20, Block 3 Lot 12, Jade St., Pacita 2A, Brgy. San Lorenzo Ruiz, San Pedro City, Laguna 4023</p>
     </section>
 
     <footer>
