--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
 
             <p><strong>Freelance Digital artist</strong> - Carlo Co. (2010 - 2012)</p>
             <ul>
-                <li>Vector portait commissioning</li>
-                <li>custom design layout</li>
-                <li>Website development</li>
-                <li>Logo design</li>
+                <li>Vector Portrait Commissioning: Created high-quality vector portraits for clients, emphasizing attention to detail, clean lines, and color accuracy to deliver personalized artwork.</li>
+                <li>Custom Design Layout: Designed unique layouts tailored to clients' specific needs, ensuring the design met both functional and aesthetic goals, from brochures to digital presentations.</li>
+                <li>Website Development: Built and designed websites, focusing on user experience and modern aesthetics, ensuring they were both visually appealing and easy to navigate.</li>
+                <li>Logo Design: Developed memorable logos for businesses, focusing on brand identity and effective visual communication to capture the essence of the client’s brand.</li>
             </ul>
 
             <p><strong>Area Technician</strong> - Digital Paradise, Inc. (2008 - 2010)</p>
             <ul>
-                <li>Managed LAN networks, PC troubleshooting and maintenance, <br> Digital service delivery, layout, printing, custom design and Logo art commissioning.</li>
-                <li>Skills: Computer Hardware Troubleshooting, Networking, Graphics layout.</li>
+                <li>Managed and maintained LAN networks, troubleshooting PC hardware and networking issues.<br> Delivered digital services, including layout and printing, custom design projects, and logo art commissions.</li>
+                <li>Skills: Computer hardware troubleshooting, networking, graphics layout, and digital service management.</li>
             </ul>
         </div>
 
@@ -141,7 +141,8 @@
         <p>Email: <a href="mailto:carlocalvo85@gmail.com">carlocalvo85@gmail.com</a></p>
         <p>Mobile: <a href="tel:+639190628082">+639190628082</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/carlo-orlando-calvo-383834114/" target="_blank">LinkedIn Profile</a></p>
-        <p>Address: #20, Block 3 Lot 12, Jade St., Pacita 2A, Brgy. San Lorenzo Ruiz, San Pedro City, Laguna 4023</p>
+        <p>Address 1: #20, Block 3 Lot 12, Jade St., Pacita 2A, Brgy. San Lorenzo Ruiz, San Pedro City, Laguna 4023</p>
+        <p>Address 2: Unit 323, Andea Tower, Alder Residences, Banyan Rd., Acacia Estates, Taguig City, Metro Manila 1630</p>
     </section>
 
     <footer>
