--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
     <section id="about">
         <h2>About Me</h2>
+        <p>I'm a passionate graphic designer with a flair for creativity and attention to detail. My work spans across various mediums, from digital art to branding, with a focus on clean, stylish, and impactful designs. With experience in the clothing industry and a loce for artistic expression, I strive to bring innovatice ideas to life. Explore my Profile to see some of the project and designs</p>
         <p>As a Customer IP Network Associate II at PLDT, the largest telecommunications and digital services provider in the Philippines, I have over five years of experience managing and maintaining network infrastructure for enterprise customers. I am skilled in LAN-WAN, data transmission, Cisco routers, and Huawei switches, with a strong background in carrier Ethernet, SDH, and IP technologies.</p>
         <p>My mission is to deliver reliable, secure, and high-quality network solutions. I work with a dedicated team on network configuration, activation, testing, troubleshooting, and monitoring. I am passionate about learning new technologies to provide the best customer experience.</p>
     </section>
@@ -42,6 +43,15 @@
 
         <div class="resume-section">
             <h3>Work Experience</h3>
+
+            <p><strong>Freelance Digital artist</strong> - Carlo Co. (2010 - Present)</p>
+            <ul>
+                <li>Vector Portrait Commissioning: Created high-quality vector portraits for clients, emphasizing attention to detail, clean lines, and color accuracy to deliver personalized artwork.</li>
+                <li>Custom Design Layout: Designed unique layouts tailored to clients' specific needs, ensuring the design met both functional and aesthetic goals, from brochures to digital presentations.</li>
+                <li>Website Development: Built and designed websites, focusing on user experience and modern aesthetics, ensuring they were both visually appealing and easy to navigate.</li>
+                <li>Logo Design: Developed memorable logos for businesses, focusing on brand identity and effective visual communication to capture the essence of the client’s brand.</li>
+            </ul>
+            
             <p><strong>Customer IP Network Associate II</strong> - PLDT (Oct 2018 - Present)</p>
             <ul>
                 <li>Managed and maintained network infrastructure and services offered for enterprise customers.</li>
@@ -83,14 +93,6 @@
                 <li>Handled customer network inside plant projects and central office installations.</li>
                 <li>Obtain tools and test equipment required for safe work practice</li>
                 <li>Skills: SDH, Fiber Optics, Telecommunications Systems.</li>
-            </ul>
-
-            <p><strong>Freelance Digital artist</strong> - Carlo Co. (2010 - 2012)</p>
-            <ul>
-                <li>Vector Portrait Commissioning: Created high-quality vector portraits for clients, emphasizing attention to detail, clean lines, and color accuracy to deliver personalized artwork.</li>
-                <li>Custom Design Layout: Designed unique layouts tailored to clients' specific needs, ensuring the design met both functional and aesthetic goals, from brochures to digital presentations.</li>
-                <li>Website Development: Built and designed websites, focusing on user experience and modern aesthetics, ensuring they were both visually appealing and easy to navigate.</li>
-                <li>Logo Design: Developed memorable logos for businesses, focusing on brand identity and effective visual communication to capture the essence of the client’s brand.</li>
             </ul>
 
             <p><strong>Area Technician</strong> - Digital Paradise, Inc. (2008 - 2010)</p>
