--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <p><strong>COE Technician</strong> - Pointman Placement Specialists Inc. (Oct 2012 - Dec 2014)</p>
             <ul>
-                <li>nstalled, configured, and maintained switching, routing, and distribution equipment in central office settings.</li>
+                <li>Installed, configured, and maintained switching, routing, and distribution equipment in central office settings.</li>
                 <li>Handled customer network projects and executed central office installations with a focus on quality and compliance.</li>
                 <li>Verify location of proposed network equipment installation according to appropriate plans obtained from authorised personnel</li>
                 <li>Install, set up, rearrange, or remove switching, distribution, routing, and dialing equipment used in central offices</li>
@@ -122,7 +122,7 @@
                 <li>PRTG</li>
                 <li>Python, HTML, CSS,  C+, Django, JavaScript, React Native, .Net</li>
                 <li>Adobe Photoshop, Adobe Illustrator, Canva, CorelDRAW, Sketch</li>
-                <li>Michrosoft Power Apps</li>
+                <li>Microsoft Power Apps</li>
             </ul>
         </div>
 
