--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li>Key Skills: Networking, Hardware Troubleshooting, Graphics design, </li>
             </ul>
 
-            <p><strong>Freelance Digital artist</strong> - Carlo Co. (2010 - 2012)</p>
+            <p><strong>Freelance Digital artist</strong> - Carlo Co. (2010 - Present)</p>
             <ul>
                 <li>Vector Portrait Commissioning: Created high-quality vector portraits for clients, emphasizing attention to detail, clean lines, and color accuracy to deliver personalized artwork.</li>
                 <li>Custom Design Layout: Designed unique layouts tailored to clients' specific needs, ensuring the design met both functional and aesthetic goals, from brochures to digital presentations.</li>
